Dodanie testów integracyjnych